# GeoIP

./: .Rbuildignore  DESCRIPTION  NAMESPACE  README  config.status  configure  configure.in  omegahatWebLogIPs.rda
R/: RGeoIP.R  config.R  config.R.in  getIPInfo.R  nearestCRAN.R
Web/: GNUmakefile  config.status  index.html  index.html.in
autom4te.cache/: output.0  traces.0
data/: oldMirrors.rda
inst/ctest/: test.c
inst/doc/: #GeoIPTU.Rdb#  GNUmakefile  GeoIP.Rdb  GeoIPTU.html  Rgeoip.c  Rgeoip.c.001t.tu  docs.R  generatedCode.rda  implementation.Rdb
man/: #GeoIPRecord_class.Rd#  #getIPPos.Rd#  GeoIPCharset_class.Rd  GeoIPCharset_enum.Rd  GeoIPDBTypes_class.Rd  GeoIPDBTypes_enum.Rd  GeoIPData.Rd  GeoIPNetspeedValues_class.Rd  GeoIPNetspeedValues_enum.Rd  GeoIPOptions_class.Rd  GeoIPOptions_enum.Rd  GeoIPProxyTypes_class.Rd  GeoIPProxyTypes_enum.Rd  GeoIPRecordTag_class.Rd  GeoIPRecord_class.Rd  GeoIPRecord_delete.Rd  GeoIPRegionTag_class.Rd  GeoIPRegion_class.Rd  GeoIPRegion_delete.Rd  GeoIPTag_class.Rd  GeoIP_assign_region_by_inetaddr.Rd  GeoIP_assign_region_by_inetaddr_v6.Rd  GeoIP_charset.Rd  GeoIP_class.Rd  GeoIP_code3_by_id.Rd  GeoIP_code_by_id.Rd  GeoIP_continent_by_id.Rd  GeoIP_country_code3_by_addr.Rd  GeoIP_country_code3_by_ipnum.Rd  GeoIP_country_code3_by_ipnum_v6.Rd  GeoIP_country_code3_by_name.Rd  GeoIP_country_code_by_addr.Rd  GeoIP_country_code_by_ipnum.Rd  GeoIP_country_code_by_ipnum_v6.Rd  GeoIP_country_code_by_name.Rd  GeoIP_country_id_by_addr.Rd  GeoIP_country_id_by_name.Rd  GeoIP_country_name_by_addr.Rd  GeoIP_country_name_by_ipnum.Rd  GeoIP_country_name_by_ipnum_v6.Rd  (+56 more)
src/: Makevars
tests/: open.R
